# cow-file-storage

./: CMakeLists.txt  README.md
data/: disk.img
doc/: main.tex
src/: main.cpp
src/abs/: inode.cpp  service.cpp
src/core/: basic_io.cpp  bitmap.cpp  blk_manager.cpp  block_attr.cpp  block_io.cpp  cache.cpp  cfs.cpp  crc64sum.cpp  inode.cpp  journal.cpp  ring_buffer.cpp
src/helper/: arg_parser.cpp  backtrace.cpp  color.cpp  execute.cpp  get_env.cpp  log.cpp  lz4.c
src/imgInTerm/: CMakeLists.txt  libtiv.cpp
src/include/: inode.h  operations.h  service.h
src/include/core/: basic_io.h  bitmap.h  blk_manager.h  block_attr.h  block_io.h  cache.h  cfs.h  crc64sum.h  inode.h  journal.h  ring_buffer.h
src/include/helper/: WorkerThread.h  arg_parser.h  backtrace.h  color.h  cpp_assert.h  err_type.h  execute.h  get_env.h  log.h
src/include/test/: test.h
src/ops/: operations.cpp
src/utest/: main.cpp  test.cpp
src/utils/: cfs.cpp  fsck.cpp  journal_hd.cpp  journal_hd.h  journal_human_readable.cpp  mkfs.cpp  mount.cpp  snapshot.c
